some administrative things

--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
 		<title>Under construction!</title>
 		<meta name="description" content="chxei's blog" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link
-			rel="shortcut icon"
-			type="image/x-icon"
-			href="assets/icons/favicon.ico"
-		/>
-
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<link rel="stylesheet" href="css/modern-normalize.css" />
 		<link rel="stylesheet" href="css/main.css" />
 
